# mooney

./: .gitignore  README.md  pyproject.toml
app/: database.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: expense.py  income.py  salary.py  transaction.py
app/models/: __init__.py  expense.py  income.py  salary.py  transaction.py  user.py
