[tool.poetry]
name = "mooney"
version = "0.1.0"
description = "personal mooney manager"
authors = ["Pratik Gorade <me@prkprime.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.1"
fastapi = "^0.70.1"
sqlmodel = "^0.0.6"
uvicorn = "^0.16.0"
gunicorn = "^20.1.0"
python-decouple = "^3.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
